--- a/UnityEssentials.UnityTickUpdate.asmdef
+++ b/UnityEssentials.UnityTickUpdate.asmdef
@@ -1,13 +1,16 @@
 {
     "name": "UnityEssentials.UnityTickUpdate",
-    "allowUnsafeCode": false,
-    "noEngineReferences": false,
-    "overrideReferences": false,
-    "autoReferenced": true,
     "rootNamespace": "UnityEssentials",
-    "references": [],
-    "precompiledReferences": [],
+    "references": [
+        "GUID:cd0c86d488f143b4c8b7c930d24f2695"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
-    "defineConstraints": []
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
