--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-    "name": "com.unityessentials.tickupdate",
-    "version": "1.0.0",
-    "displayName": "UnityEssentials TickUpdate",
-    "description": "This is a part of the UnityEssentials Ecosystem",
-    "unity": "2022.1",
-    "documentationUrl": "",
-    "changelogUrl": "",
-    "licensesUrl": "",
-    "dependencyList": [],
-    "keywords": [],
-    "author": {
-        "name": "Unity Essentials",
-        "email": "",
-        "url": ""
-    }
+  "name": "com.unityessentials.tickupdate",
+  "version": "1.0.0",
+  "displayName": "UnityEssentials TickUpdate",
+  "description": "This is a part of the UnityEssentials Ecosystem",
+  "unity": "2022.1",
+  "documentationUrl": "",
+  "changelogUrl": "",
+  "licensesUrl": "",
+  "dependencies": { "com.unityessentials.essentials": "1.0.0" },
+  "keywords": [],
+  "author": {
+    "name": "Unity Essentials",
+    "email": "",
+    "url": ""
+  }
 }
