--- a/Runtime/UnityEssentials.TickUpdate.asmdef
+++ b/Runtime/UnityEssentials.TickUpdate.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "UnityEssentials.UnityTickUpdate",
+    "name": "UnityEssentials.TickUpdate",
     "rootNamespace": "UnityEssentials",
     "references": [
         "GUID:cd0c86d488f143b4c8b7c930d24f2695"
